--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   qr_flutter: ^4.1.0
   screenshot: ^3.0.0
   flutter_riverpod: ^2.5.1
+  mobile_scanner: ^5.2.3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
