--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  image_gallery_saver: ^2.0.3
   permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
-  screenshot: ^3.0.0
   flutter_riverpod: ^2.5.1
   mobile_scanner: ^5.2.3
   url_launcher: ^6.3.0
+  device_info_plus: ^10.1.2
+  saver_gallery: ^3.0.6
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
