--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   device_info_plus: ^10.1.2
   saver_gallery: ^3.0.6
   fluttertoast: ^8.2.8
+  image_picker: ^1.1.2
+  google_ml_kit: ^0.18.1
+ 
+
 
 dev_dependencies:
   flutter_test:
