--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,24 @@
+buildscript {
+    ext.kotlin_version = '1.8.10'
+    repositories {
+        google()
+        mavenCentral()
+         maven { url "https://plugins.gradle.org/m2/" }
+        
+    }
+
+    dependencies {
+         classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
+         maven { url "https://plugins.gradle.org/m2/" }
     }
 }
 
