--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_storage: 
   permission_handler: ^11.3.1
   qr_flutter: ^4.1.0
   flutter_riverpod: ^2.5.1
@@ -46,6 +50,9 @@ dependencies:
   google_ml_kit: ^0.18.1
   share_plus: ^10.0.2
   saver_gallery: ^3.0.6
+  lottie: ^3.1.2
+  carousel_slider: ^5.0.0
+  rive: ^0.13.13
  
 
 
@@ -72,9 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
+    - lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
