--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,12 +53,14 @@ dependencies:
   lottie: ^3.1.2
   carousel_slider: ^5.0.0
   rive: ^0.13.13
+  # google_mobile_ads: ^5.1.0
  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
